--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
   <head>
     <link rel="stylesheet" href="style.css" />
     <title>My Website</title>
+    
   </head>
   <body>
     <script src="script.js"></script>
-    <h1>My Actual Website</h1>
+    <h1 id="clickFor">hover for color</h1>
+
+
+    <p id="para" onmouseover="changeBackground()" onmouseout="backToNormal()"> hover here..</p>
+
   </body>
+
+  <ul id="para2">
+      <li>"things to do"</li>
+      <li>"places to go"</li>
+      <li>"people to see"</li>
+  </ul>
+ 
 </html>
